fix: player stuck in the queue-mutex lock-...

--- a/src/pniw_pong/index.css
+++ b/src/pniw_pong/index.css
@@ -1,20 +1,22 @@
 .content {
 margin: 0;
   width: 100%;
-  height: 90%;
-  background: #000000;
+  height: 100%;
   position: relative;
+background: #000FFF;
 }
 
 .container{
     overflow: hidden;
     margin : 0;
-    background: #282828;
+    background: #000000;
+    /* background: #282828;*/
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
+    padding-top: 100vw;
 }
 
 .border{
